# OutlookUnreadCounter

./: .gitignore  README.md  build.sh  pyproject.toml
.github/workflows/: build-release.yml  release.yml
com.mcczarny.outlookunreadcounter.sdPlugin/: manifest.json  run.bat
com.mcczarny.outlookunreadcounter.sdPlugin/code/: context_data.py  mail_states.py  main.py  requirements.txt  tile_visualizer.py
com.mcczarny.outlookunreadcounter.sdPlugin/property_inspector/: unread_counter_pi.html  unread_counter_pi.py  unreadcounter_pi.html
